--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bac885c1b3d5e20b2e9370f400fac650"
+    ></script>
     <title>Re:pair</title>
   </head>
   <body>
