--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,10 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=bac885c1b3d5e20b2e9370f400fac650"
     ></script>
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="upgrade-insecure-requests"
+    />
     <title>Re:pair</title>
   </head>
   <body>
