--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,7 @@
       type="text/javascript"
       src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=bac885c1b3d5e20b2e9370f400fac650"
     ></script>
-    <title>React App</title>
+    <title>Re:pair</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
