--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link
+    <link
       rel="apple-touch-icon-precomposed"
       sizes="57x57"
       href="./favicomatic/apple-touch-icon-57x57.png"
@@ -78,8 +78,8 @@
     <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
-    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" /> -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
